fixed text spacing

--- a/css/rank-sellers-v2-dev.css
+++ b/css/rank-sellers-v2-dev.css
@@ -1,5 +1,3 @@
-
-
 :root {
   --background-color: #f9f9f9;
   --text-color: #222;
@@ -20,10 +18,10 @@
   --button-hover-background-color: #0056b3;
   --warning-color: #DD2222;
   --warning-text-shadow-color: #000000;
-  --background-tint: rgba(0,0,0,0);
+  --background-tint: rgba(0, 0, 0, 0);
 }
 
-.darkmode{
+.darkmode {
   --background-color: #222222;
   --text-color: #eee;
   --title-color: #ffffff;
@@ -44,7 +42,7 @@
   --button-hover-background-color: #222222;
   --warning-color: red;
   --warning-text-shadow-color: #000000;
-  --background-tint: rgba(0,0,0,0.5);
+  --background-tint: rgba(0, 0, 0, 0.5);
 }
 
 :root {
@@ -210,13 +208,13 @@ body {
   padding: 0;
   color: var(--text-color);
   text-align: left;
-  background: url("../Backgrounds/IMG_4504.jpeg");
+  background: url("../Backgrounds/1000005399-modified~2.png");
   background-size: cover;
   background-position-x: center;
 }
 
 a.seller-card {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 * {
@@ -268,6 +266,9 @@ footer {
   min-height: 200px;
   color: var(--text-color);
   border: 1px solid rgba(255, 255, 255, 0.125);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .darkmode .seller-card {
@@ -354,13 +355,13 @@ footer {
 }
 
 #theme-switch {
-  height: 50px; 
-  width: 50px; 
-  padding: 0; 
+  height: 50px;
+  width: 50px;
+  padding: 0;
   border-radius: 50%;
-  background-color: var(--button-background-color) ;
+  background-color: var(--button-background-color);
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
   position: fixed;
   top: 70px;
@@ -368,7 +369,7 @@ footer {
   z-index: 200;
 }
 
-#theme-switch svg{
+#theme-switch svg {
   fill: white;
 }
 
@@ -386,12 +387,12 @@ footer {
 
 @media (max-width: 1200px) and (min-width: 600px) {
   .seller-list {
-      grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 600px) {
   .seller-list {
-      grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 }
